--- a/Areas/Admin/Views/Slider/Create.cshtml
+++ b/Areas/Admin/Views/Slider/Create.cshtml
@@ -3,7 +3,6 @@
     ViewData["Title"] = "Create";
 }
 
-
 <div class="card shadow mb-4">
     <div class="card-header py-3">
         <h6 class="m-0 font-weight-bold text-primary">Create Slider</h6>
@@ -12,17 +11,17 @@
         <form asp-action="Create" method="post">
             <div class="form-group">
                 <label asp-for="Title"></label>
-                <input asp-for="Title" value="" class="form-control">
+                <input asp-for="Title" class="form-control">
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Text"></label>
-                <input asp-for="Text" value="" class="form-control">
+                <input asp-for="Text" class="form-control">
                 <span asp-validation-for="Text" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ImageUrl"></label>
-                <input asp-for="ImageUrl" value="" class="form-control">
+                <input asp-for="ImageUrl" class="form-control">
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
             <div class="form-group">
