--- a/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using Pustok2.ViewModel.SliderVM;
+@using Pustok2.ViewModel.SliderVM
+@using Pustok2.ViewModel.CategoryVM
+@using Pustok2.ViewModel.ProductVM
